[project]
name = "hashcache"
version = "0.1.0"
description = "Simple disk-based function result caching using Python decorators"
authors = [
    { name = "Daniel Samuelson", email = "daniel.samuelson8@gmai.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dill = ["dill"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
